--- a/src/Components/CoolTailComplaint/CoolTail.css
+++ b/src/Components/CoolTailComplaint/CoolTail.css
@@ -1,7 +1,7 @@
 .page_two_complaint_failure {
   width: 97%;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .page_two_complaint_failure h2 {
@@ -236,7 +236,7 @@
 }
 /* -------------------------------------------------------- (  page_two_complaint_list ) --------------------------------------------------------- */
 
-.main_black_div {
+.main-black-div {
   background: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   position: absolute;
@@ -245,7 +245,7 @@
   height: 290vh;
 }
 
-.page_two_complaint_list {
+.page-two-component {
   background-color: white;
   flex-direction: column;
   width: 40%;
@@ -258,7 +258,7 @@
   transform: translate(-50%, -50%);
 }
 
-.page_two_complaint_list h3 {
+.page-two-component h3 {
   font-weight: bold;
   margin-left: 26%;
   font-size: 20pt;
@@ -277,7 +277,7 @@
   margin: 0px 24px;
 } */
 
-.page_two_complaint_list .complist input {
+.page-two-component .complist input {
   accent-color: #00a53e;
   width: 21pt;
   margin-top: 6px;
@@ -413,8 +413,10 @@
 
 .Form-text textarea {
   width: 20rem;
-  height: 10vh;
-  border: 2px solid black;
+  height: 15vh;
+  border: 2px solid #b4f8c8;
+  border-radius: 15px;
+  background-color: #b4f8c8;
 }
 
 .complaints_container form {
@@ -444,6 +446,21 @@
   margin-top: -38px;
   color: rgb(0, 0, 0);
   font-size: 18pt;
+}
+
+.Button-Save {
+  margin-left: -10rem;
+  margin-top: 50%;
+  width: 200pt;
+  height: 50pt;
+  background-color: rgb(8, 136, 38);
+  border-radius: 6pt;
+  border-color: rgb(8, 136, 38);
+  border-right: rgb(8, 136, 38);
+  border-bottom: rgb(8, 136, 38);
+  color: rgb(255, 255, 255);
+  font-size: 20pt;
+  letter-spacing: 0.89pt;
 }
 
 /********************************************Media query for desktops and laptops *****************************/
