--- a/src/Components/PendingJobs/PendingJobs.css
+++ b/src/Components/PendingJobs/PendingJobs.css
@@ -8,14 +8,14 @@
 }
 
 .Main-Jobs .Jobs {
-  margin-left: 15rem;
-  margin-bottom: 5rem;
+  margin-left: 8rem;
+  margin-bottom: 0rem;
 }
 
 .Main-Jobs .Jobs .Supervisor-view {
   text-align: center;
   margin-top: 3rem;
-  margin-right: 24.5rem;
+  margin-right: 20.5rem;
   font-size: 30pt;
   font-family: "Roboto-Black", sans-serif;
 }
@@ -90,7 +90,7 @@
 .Jobs .Foreman-view {
   text-align: center;
   margin-top: 6rem;
-  margin-right: 27.5rem;
+  margin-right: 23.5rem;
   font-size: 30pt;
   font-family: "Roboto-Black", sans-serif;
 }
@@ -102,215 +102,95 @@
 .Jobs .Technician-view {
   text-align: center;
   margin-top: 8rem;
-  margin-right: 27.5rem;
+  margin-right: 21.5rem;
   font-size: 30pt;
   font-family: "Roboto-Black", sans-serif;
 }
 
 /*****************************************<TechnicianJobsButtons.js/>*******************************/
+
+/*****************************************<ManagerViewJobs.js>*******************************/
+.Main-Jobs .Manger-view {
+  text-align: center;
+  margin-top: 8rem;
+  margin-right: 21.5rem;
+  font-size: 30pt;
+  font-family: "Roboto-Black", sans-serif;
+}
+
+/*****************************************<ManagerViewJobs.js/>*******************************/
 /************************************** Media query For Mobile Screen *************************/
 
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
-  .Main-Jobs .Jobs .Supervisor-view {
+  .Main-Jobs .Jobs {
     margin-top: 20rem;
-    font-size: 60px;
-  }
-  .Main-Jobs button {
-    width: 50rem;
-    height: 25vh;
-    font-size: 55px;
-    padding-top: 5rem;
     margin-left: 5rem;
   }
-  .Main-Jobs button img {
-    width: 10rem;
-    height: 17vh;
-    margin-top: -50px;
-  }
-  .Jobs .Foreman-view {
-    margin-top: 30rem;
-    font-size: 65px;
-    margin-left: -1rem;
-  }
-  .Jobs .Technician-view {
-    margin-top: 30rem;
-    font-size: 58px;
-  }
-}
-
-/********************************************Media Query for low resolution  Tablets, Ipads*************************/
-
-/* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 481px) and (max-width: 767px) {
-  .Main-Jobs .Jobs {
-    margin-left: 35rem;
-  }
-  .Main-Jobs .Jobs .Supervisor-view {
-    margin-top: 30rem;
-    font-size: 80px;
-    width: 40rem;
-    margin-left: -2rem;
-  }
-  .Main-Jobs button {
-    width: 70rem;
-    height: 35vh;
-    font-size: 80px;
-    margin-top: 3rem;
-    margin-left: 5rem;
-  }
-  .Main-Jobs button img {
-    width: 10rem;
-    margin-left: 15px;
-    height: 20vh;
-  }
-  .Jobs .Foreman-view {
-    margin-top: 30rem;
-    font-size: 80px;
-    width: 35rem;
-    margin-left: -2rem;
-  }
-  .Jobs .Technician-view {
-    margin-top: 40rem;
-    font-size: 80px;
-    width: 40rem;
-    margin-left: -2rem;
-  }
-}
-
-/******************************************************Media query for Tablets ****************************************/
-
-/******************************************************* Media Query for Tablets Ipads portrait mode*********************************/
-
-/*working only in ipad portrait device*/
-@media only screen and (width: 768px) and (height: 1024px) and (orientation: portrait) {
-  .Main-Jobs {
-    width: 175rem;
-  }
-  .Main-Jobs .Jobs {
-    margin-left: 45rem;
-  }
-  .Main-Jobs .Jobs .Supervisor-view {
-    margin-top: 40rem;
-    font-size: 100px;
-    width: 50rem;
-    margin-left: -2rem;
-  }
-  .Main-Jobs button {
-    width: 100rem;
-    height: 35vh;
-    font-size: 110px;
-    margin-top: 3rem;
-    margin-left: 5rem;
-  }
-  .Main-Jobs button img {
-    width: 14rem;
-    margin-left: 25px;
-    height: 22vh;
-  }
-  .Jobs .Foreman-view {
-    margin-top: 60rem;
-    font-size: 100px;
+  .Jobs .Supervisor-view {
+    padding-left: 15rem;
     width: 45rem;
-    margin-left: -2rem;
-  }
-  .Jobs .Technician-view {
-    margin-top: 70rem;
-    font-size: 100px;
-    width: 50rem;
-    margin-left: -2rem;
-  }
-}
-
-/*******************************************Media query working only in ipad landscape device************************/
-
-/*working only in ipad landscape device*/
-@media all and (width: 1024px) and (height: 768px) and (orientation: landscape) {
-  .Main-Jobs {
-    width: 175rem;
-  }
-  .Main-Jobs .Jobs {
-    margin-left: 35rem;
-  }
-  .Main-Jobs .Jobs .Supervisor-view {
-    margin-top: 15rem;
-    font-size: 100px;
-    width: 50rem;
-    margin-left: -2rem;
-  }
-  .Main-Jobs button {
-    width: 110rem;
-    height: 45vh;
-    font-size: 110px;
-    margin-top: 3rem;
-    margin-left: 5rem;
-  }
-  .Main-Jobs button img {
-    width: 15rem;
-    margin-left: 25px;
-    height: 30vh;
   }
   .Jobs .Foreman-view {
-    margin-top: 20rem;
-    font-size: 100px;
+    padding-left: 14rem;
     width: 45rem;
-    margin-left: -2rem;
   }
+
   .Jobs .Technician-view {
-    margin-top: 35rem;
-    font-size: 100px;
-    width: 50rem;
-    margin-left: -2rem;
+    padding-left: 14rem;
+    width: 45rem;
+  }
+  .Main-Jobs .Manger-view {
+    padding-left: 14rem;
+    width: 45rem;
   }
 }
 
-/**********************************************Media Query for Large devices ***********************************/
+/**************************************************Media Query For ipad Air *******************************************/
 
-/* Media Query for Large screens */
-@media (min-width: 1281px) {
-  .Main-Jobs .Jobs .Supervisor-view {
-    margin-top: 3rem;
-    font-size: 40px;
-    margin-left: 2rem;
+@media screen and (device-width: 820px) and (device-height: 1180px) {
+  .Main-Jobs .Jobs {
   }
-  .Main-Jobs button {
-    width: 40%;
-    height: 15vh;
-    font-size: 32px;
+  .Main-Jobs .Manger-view {
+    width: 59rem;
+  }
+  .Main-Jobs button img {
+    width: 4rem;
+    height: 5vh;
+  }
+  .Jobs .Technician-view {
+    width: 60rem;
+  }
+  .Jobs .Foreman-view {
+    width: 60rem;
+  }
+  .Main-Jobs .Jobs .Supervisor-view {
+    width: 60rem;
+    margin-top: 5rem;
+  }
+}
+
+@media screen and (device-width: 1180px) and (device-height: 820px) {
+  .Main-Jobs .Jobs {
+    margin-left: 7rem;
+  }
+  .Main-Jobs .Manger-view {
+    width: 58rem;
+  }
+  .Main-Jobs button img {
+    width: 4rem;
+    height: 7vh;
+  }
+  .Main-Jobs .Jobs .Supervisor-view {
+    padding-left: 18rem;
     margin-top: 1rem;
-    margin-left: 20rem;
-  }
-  .Main-Jobs button img {
-    width: 13%;
-    height: 9vh;
   }
   .Jobs .Foreman-view {
-    margin-top: 6rem;
-    font-size: 35px;
-    width: 50%;
-    margin-left: 4rem;
+    padding-left: 18rem;
+    margin-top: 1rem;
   }
   .Jobs .Technician-view {
-    margin-top: 10rem;
-    font-size: 35px;
-    width: 50%;
-    margin-left: 5rem;
-  }
-
-  .Assigned-jobs {
-    width: 100%;
-  }
-
-  .In-progress-jobs {
-    width: 100%;
-  }
-}
-
-/************************************* Media Query ******************************/
-
-/* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {
-  .Main-Jobs {
-    background-color: green;
+    width: 60rem;
+    margin-top: 5rem;
   }
 }
