--- a/src/Components/Regsiteration/ForgetPass.css
+++ b/src/Components/Regsiteration/ForgetPass.css
@@ -28,7 +28,7 @@
   margin-top: 0.7rem;
   margin-bottom: 1.5rem;
 } */
-.registerText label {
+/* .registerText label {
   margin-top: 8rem;
   display: flex;
   font-size: 1.3rem;
@@ -86,7 +86,7 @@
 }
 
 /* CSS */
-.button-37 {
+/* .button-37 {
   background-color: rgb(43, 179, 43);
   border: 1px solid rgb(43, 179, 43);
   border-radius: 4px;
@@ -112,7 +112,7 @@
   width: 40em;
   height: 5em;
   /* touch-action: manipulation; */
-}
+/* }
 
 .button-37:hover {
   box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
@@ -123,7 +123,7 @@
   .button-37 {
     padding: 10px 30px;
   }
-}
+} */
 /* ....///Media query///..... */
 
 /* @media (max-width: 501px) {
@@ -163,6 +163,47 @@
   }
 } */
 
-.Register_img {
+/* .Register_img {
   width: 17rem;
+} */
+
+.Main_component {
+  display: flex;
+  margin-left: 35%;
+  margin-top: 3rem;
+}
+
+.Main_component form .form-group input {
+  width: 30rem;
+  height: 10vh;
+}
+
+.Main_component form button {
+  width: 30rem;
+  height: 12vh;
+  font-size: 30px;
+  margin-top: 1rem;
+  background-color: rgb(8, 136, 38);
+  box-shadow: rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.Main_component form button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(8, 136, 38);
+}
+
+.Image-form img {
+  width: 15rem;
+  margin-left: 5rem;
+}
+
+.Image-form {
+  margin-bottom: 2rem;
+}
+
+.Main_component form h3 {
+  margin-top: 2rem;
+  margin-left: 0rem;
+  color: rgb(51, 182, 82);
+  font-size: 22px;
 }
