--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -48,12 +48,12 @@
 
 .page_two_chooes .kt input[type="radio"] {
   width: 30px;
-  margin-top: -10px;
+  margin-top: 5px;
   cursor: pointer;
 }
 .page_two_chooes .chassis input[type="radio"] {
   width: 30px;
-  margin-top: -10px;
+  margin-top: 5px;
   cursor: pointer;
 }
 
@@ -61,6 +61,7 @@
   font-size: 15pt;
   margin-left: 25px;
   color: rgb(0, 0, 0);
+  padding-top: 1rem;
 }
 
 .chassis {
@@ -72,6 +73,7 @@
   font-size: 15pt;
   margin-left: 25px;
   color: rgb(0, 0, 0);
+  padding-top: 1rem;
 }
 
 .page_two_or p {
@@ -79,20 +81,23 @@
   font-weight: bold;
   height: 55px;
   margin-right: 0%;
-  padding-top: 25px;
+  padding-top: 32px;
 }
 
 .page_two_or {
   display: flex;
 }
 
+.page_two_middel_box form {
+  display: flex;
+}
 .page_two_serchbar {
   box-shadow: 0 0 1px black;
   width: 425px;
   border-radius: 5px;
   margin-top: 1rem;
+  margin-left: 13rem;
   position: relative;
-  margin-right: 1rem;
 }
 .page_two_serchbar input {
   width: 300px;
@@ -141,14 +146,14 @@
   height: 7vh;
   cursor: pointer;
 }
-/* .Registration-form {
+.Registration-form {
   background: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   position: absolute;
   top: -1%;
   width: 100vw;
-  height: 290vh;
-} */
+  height: 230vh;
+}
 
 .New-register {
   background-color: white;
@@ -158,17 +163,18 @@
   border-radius: 5px;
   box-shadow: 0px 0px 5px black;
   position: absolute;
-  height: 200vh;
-  top: 102%;
+  height: 185vh;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .Register h1 {
   text-align: center;
+  padding-top: 20px;
 }
-form h3 {
-  margin-top: 3rem;
+.Form-details h3 {
+  margin-top: 2rem;
   margin-left: 1rem;
 }
 
@@ -209,21 +215,31 @@ form h3 {
   margin-top: 50px;
 }
 
-.vehicle-details .vnumber {
+.vnumber {
+  display: inline-block;
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.vnumber input {
+  width: 19.7rem;
+  height: 8vh;
+}
+/* .Form-details .vnumber {
   display: inline-block;
   margin: 10px 15px;
   width: 228pt;
-  margin-top: 3rem;
-}
+  margin-top: 0rem;
+} */
 
 .form-Vehicle input {
-  height: 46pt;
+  height: 55pt;
   width: 82rem;
 }
 
-.vehicle-details h3 {
+/* .Form-details h3 {
   margin-top: 3rem;
-}
+} */
 
 .vehicle-address {
   margin-top: 10px;
@@ -239,8 +255,9 @@ form h3 {
   width: 370pt;
   height: 68pt;
   margin-top: 4rem;
-  font-size: 16pt;
+  font-size: 20pt;
   margin-left: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .Register .cancel-button {
@@ -248,21 +265,31 @@ form h3 {
   color: rgb(0, 0, 0);
   border: 7px solid rgb(226, 245, 231);
   border-radius: 6px;
+  display: block;
 }
 
-.Register .save-button {
+.Register .btn {
   background-color: rgb(8, 136, 38);
   border: 7px solid rgb(8, 136, 38);
   border-radius: 6px;
-  margin-left: 19rem;
+  display: inline-block;
+  margin-left: 50rem;
+  margin-top: -7rem;
   color: white;
 }
 .Register .cancel-button:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-.Register .save-button:hover {
+.Register .btn:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  color: white;
+  background-color: rgb(8, 136, 38);
+}
+
+form #label {
+  color: red;
+  position: absolute;
 }
 
 /* 
