--- a/src/Components/SupervisorPage/SupervisorTailComponent.css
+++ b/src/Components/SupervisorPage/SupervisorTailComponent.css
@@ -48,7 +48,7 @@
 .data_table_tab tr th {
   background-color: rgb(8, 136, 38);
   padding: 10px;
-  width: 170px;
+  width: 278px;
   text-align: left;
   color: white;
   font-size: 17px;
@@ -57,6 +57,30 @@
 .data_table_tab td {
   text-align: left;
   font-size: 18px;
+}
+
+.data_table_tab tr {
+  font-size: 30rem;
+}
+
+.table_Div i {
+  margin-left: 90%;
+  margin-top: -8%;
+  margin-right: 3px;
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  color: #00a53e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.table_Div {
+  border-collapse: separate;
+  border-spacing: 0.1em;
 }
 
 /*************************************Responsive page for ManagerPage <ManagerTailComplaint.js>***********************/
